app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yeaktonghan-spring-maven-war-ingress
  namespace: yeaktonghan
spec:
  tls:
    - hosts:
        - autopilot8.hanyeaktong.site
      secretName: autopilot8-hanyeaktong-site-cert
  rules:
    - host: autopilot8.hanyeaktong.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: yeaktonghan-spring-maven-war-svc
                port:
                  number: 8888
